assets/css/main.scss
/* ... */
@media only screen and (max-width: 991px) {
    section#play {
        .how-to-play,
        .alert,
        p {
            max-width: 100%;
        }

        .how-to-play {
            .how-to-play-item {
                height: auto;

                .how-to-play-item-step {
                    min-width: 50px;
                    max-width: 50px;
                }

                .how-to-play-item-content {
                    padding: 10px 65px 10px 15px;
                }
            }
        }

        .btn-primary {
            margin-bottom: 15px;
        }
    }

    section#about {
        .grid {
            grid-template-columns: repeat(2, 1fr);
            grid-gap: 30px;
        }
    }

    section#features {
        .features-grid {
            grid-template-columns: repeat(1, 1fr);
            grid-gap: 30px;
        }
    }

    .blog-posts-container {
        grid-template-columns: repeat(2, 1fr);
    }
}


@media only screen and (max-width: 768px) {
    .section-title {
        font-size: 2.25rem;

        &::before {
            left: -41px;
            top: -30px;
            width: 80px;
            height: 76px;
        }
    }

    section#play {
        .how-to-play,
        .alert,
        p {
            max-width: 100%;
        }

        .how-to-play {
            .how-to-play-item {
                height: auto;

                .how-to-play-item-step {
                    min-width: 45px;
                    max-width: 45px;
                    font-size: 22px;
                }

                .how-to-play-item-content {
                    font-size: .85rem;
                    line-height: 1.2rem;
                    font-weight: 500;
                    padding: 10px 15px;
                }

                .how-to-play-item-content::before {
                    display: none;
                }
            }
        }

        .btn:first-of-type {
            margin-bottom: 15px;
        }
    }

    section#about {
        .grid {
            grid-template-columns: repeat(1, 1fr);
            grid-gap: 30px;
        }
    }

    section#features {
        .features-grid {
            grid-template-columns: repeat(1, 1fr);
            grid-gap: 30px;
        }
    }

    .blog-posts-container {
        grid-template-columns: repeat(1, 1fr);
    }
}

